--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.12",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/axios": "^0.14.0",
     "@types/react-dom": "^18.2.12",
     "@types/react-redux": "^7.1.27",
+    "axios": "^1.5.1",
     "babel-loader": "^9.1.3",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
