--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env BACKEND_URL=https://api.coinbase.com/v2 webpack serve",
-    "build": "cross-env BACKEND_URL=https://api.coinbase.com/v2 webpack"
+    "dev": "webpack serve",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "AndrewVLG",
@@ -46,6 +46,7 @@
     "babel-loader": "^9.1.3",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-error-boundary": "^4.0.11",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   },
